--- a/.env-template
+++ b/.env-template
@@ -37,10 +37,12 @@ YAGNA_DATADIR="."
 #ACCOUNT_LIST="${YAGNA_DATADIR}/accounts.json"
 #PAYMENT_SHUTDOWN_TIMEOUT_SECS=10
 
+## All drivers
+#RINKEBY_GETH_ADDR=http://1.geth.testnet.golem.network:55555
+#MAINNET_GETH_ADDR=https://geth.golem.network:55555
+
 ## ERC20 driver.
 #ETH_FAUCET_ADDRESS=http://faucet.testnet.golem.network:4000/donate
-#ERC20_RINKEBY_GETH_ADDR=http://1.geth.testnet.golem.network:55555
-#ERC20_MAINNET_GETH_ADDR=https://geth.golem.network:55555
 #ERC20_RINKEBY_REQUIRED_CONFIRMATIONS=3
 #ERC20_MAINNET_REQUIRED_CONFIRMATIONS=5
 #RINKEBY_TGLM_CONTRACT_ADDRESS=0xd94e3DC39d4Cad1DAd634e7eb585A57A19dC7EFE
@@ -52,6 +54,7 @@ YAGNA_DATADIR="."
 ## ZkSync driver
 #ZKSYNC_RINKEBY_RPC_ADDRESS=https://rinkeby-api.zksync.io/jsrpc
 #ZKSYNC_MAINNET_RPC_ADDRESS=https://api.zksync.io/jsrpc
+#ZKSYNC_ETH_CONFIRMATION_TIMEOUT_SECONDS=60
 #ZKSYNC_FAUCET_ADDR=
 #ZKSYNC_SENDOUT_INTERVAL_SECS=10
 #ZKSYNC_CONFIRMATION_INTERVAL_SECS=5
