--- a/core/payment-driver/zksync/Cargo.toml
+++ b/core/payment-driver/zksync/Cargo.toml
@@ -20,6 +20,7 @@ log = "0.4.8"
 maplit = "1.0"
 metrics-macros = "=0.1.0-alpha.5"
 num-bigint = { version = "0.3", features = ["serde"] }
+rlp = "0.4"
 serde = "1.0"
 serde_json = "^1.0"
 tiny-keccak = "1.4.2"
