--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -20,7 +20,7 @@ readme = "README.md"
 python = "^3.8.0"
 pytest = "^5.4.3"
 pytest-asyncio = "^0.12.0"
-goth = "^0.2.0"
+goth = { git = "https://github.com/golemfactory/goth", branch = "provider/test-breaking-agreement" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
