Add network disconnect step to goth Actions workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -126,6 +126,13 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-root
 
+      - name: Disconnect Docker containers from default network
+        continue-on-error: true
+        run: |
+          docker network inspect docker_default
+          sudo apt-get install -y jq
+          docker network inspect docker_default | jq ".[0].Containers | map(.Name)[]" | tee /dev/stderr | xargs --max-args 1 -- docker network disconnect -f docker_default
+
       - name: Remove Docker containers
         continue-on-error: true
         run: docker rm -f $(docker ps -a -q)
