Fix test with unreachable Requestor using higher DebitNotes interval

--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -31,4 +31,7 @@ poethepoet = "^0.8.0"
 codestyle = "black --check --diff ."
 goth-assets = "python -m goth create-assets assets"
 goth-tests = "pytest -svx ."
+provider-tests = "pytest -svx ./domain/ya-provider"
 typecheck = "mypy ."
+
+
