--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,13 +31,13 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
 
-      - name: Check lockfile [ cargo tree ]
+      - name: Check lockfile
         uses: actions-rs/cargo@v1
         with:
           command: tree
           args: --locked
 
-      - name: Check formatting [ cargo fmt ]
+      - name: Check formatting
         uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -50,19 +50,19 @@ jobs:
           vcpkg list
           vcpkg integrate install
 
-      - name: Unit tests [ cargo test --workspace --locked ]
+      - name: Unit tests
         if: false #TODO: restore
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --workspace --locked
 
-      - name: Unit tests for SGX [ cd exe-unit && cargo test --features sgx ]
+      - name: Unit tests for SGX
         if: false #TODO: restore ${{ runner.os == 'Linux' && startsWith( github.head_ref, 'market/' ) }}
         working-directory: exe-unit
         run: cargo test --features sgx
 
-      - name: Market Test Suite (semi-integration tests) [ cargo test --workspace --features ya-market/test-suite ]
+      - name: Market Test Suite (semi-integration tests)
         uses: actions-rs/cargo@v1
         if: false #TODO: restore startsWith( github.head_ref, 'market/' )
         with:
@@ -74,7 +74,7 @@ jobs:
           # because the latter needs separate compilation of lots of dependant crates again.
           args: --tests --workspace --features ya-market/test-suite
 
-      - name: Build binaries [ cargo build --workspace ]
+      - name: Build binaries
         if: false #TODO: restore
         uses: actions-rs/cargo@v1
         with:
