--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -52,18 +52,18 @@ jobs:
       - name: Log in to GitHub Docker repository
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{github.actor}} --password-stdin
 
-      - name: Download Yagna artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: 'Yagna Linux'
-          path: /tmp/yagna-build
+#      - name: Download Yagna artifact
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: 'Yagna Linux'
+#          path: /tmp/yagna-build
 
       - name: Run test suite
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           poetry run poe goth-assets
-          poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
+          poetry run poe goth-tests --config-override docker-compose.build-environment.commit-hash=${{ github.event.workflow_run.head_sha }}
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
