[CI] temporarily disable more steps

--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.event.workflow_run.head_branch }}
       - run: git branch
       - run: env
-      - run: echo ${{ github.event }}
+      - run: echo '${{ toJSON(github.event) }}'
 
   integration-test:
     name: Integration Tests
