--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,6 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
-      - run: echo ${{ github.event }}
       - name: Checkout
         uses: actions/checkout@v1
 
@@ -33,12 +32,14 @@ jobs:
           components: rustfmt, clippy
 
       - name: Check lockfile
+        if: false #TODO: restore
         uses: actions-rs/cargo@v1
         with:
           command: tree
           args: --locked
 
       - name: Check formatting
+        if: false #TODO: restore
         uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -83,6 +84,7 @@ jobs:
           args: --workspace
 
       - name: Copy binaries
+        if: false #TODO: restore
         shell: bash
         run: |
           mkdir build
