--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -6,17 +6,6 @@ on:
     types: [completed]
 
 jobs:
-  everytime:
-    name: Dummy job
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.workflow_run.head_branch }}
-      - run: git branch
-      - run: env
-      - run: echo '${{ toJSON(github.event) }}'
-
   integration-test:
     name: Integration Tests
     runs-on: goth
@@ -64,6 +53,8 @@ jobs:
         run: |
           poetry run poe goth-assets
           poetry run poe goth-tests --config-override docker-compose.build-environment.commit-hash=${{ github.event.workflow_run.head_sha }}
+
+        # poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
