--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -21,6 +21,8 @@ python = "^3.8.0"
 pytest = "^5.4.3"
 pytest-asyncio = "^0.12.0"
 goth = "^0.2.0"
+# to use development goth version uncomment below
+#goth = { git = "https://github.com/golemfactory/goth/goth.git", rev = "29e21ac6a9a755f757d6a0ebf9ebeb21d14139d6" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
