[ci] fix goth checkout: use head_sha instead head_branch

--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - name: Configure Python
         uses: actions/setup-python@v2
