[CI] Add triggering (parent) workflow context to the (child) Goth workflow

--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -6,6 +6,15 @@ on:
     types: [completed]
 
 jobs:
+  triggering-workflow-info:
+    name: Triggerin Workflow Info
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub event context
+        env:
+          GH_EVENT_CONTEXT: ${{ toJSON(github.event) }}
+        run: echo "$GH_EVENT_CONTEXT"
+
   integration-test:
     name: Integration Tests
     runs-on: goth
