--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0"
 futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
+metrics="0.12"
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "0.2", features = ["time"] }
