--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 [features]
 test-suite = []
 bcast-singleton = []
-testing = ["actix-http", "actix-service", "env_logger"]
 
 [dependencies]
 ya-agreement-utils = { version = "^0.2"}
@@ -23,8 +22,13 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-api-web = "0.1"
 ya-service-bus = "0.4"
+ya-utils-actix = "0.1"
 
+
+actix = { version = "0.10", default-features = false }
+actix-http = { version = "2.2" }
 actix-rt = { version = "1.0.0" }
+actix-service = { version = "1.0" }
 actix-web = "3.2"
 anyhow = "1.0"
 async-trait = { version = "0.1.33" }
@@ -34,6 +38,7 @@ derive_more = "0.99.5"
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
 diesel_migrations = "1.4"
 digest = "0.8.1"
+env_logger = { version = "0.7" }
 futures = "0.3"
 humantime = "2.0.0"
 lazy_static = "1.4"
@@ -44,6 +49,7 @@ num-derive = "0.3"
 num-traits = "0.2"
 r2d2 = "0.8"
 rand = "0.7.2"
+regex = "1.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha3 = "0.8.2"
@@ -54,15 +60,7 @@ thiserror = "1.0"
 tokio = { version = "0.2", features = ["time", "sync"] }
 uuid = { version = "0.8", features = ["v4"] }
 
-# testing
-actix-http = { version = "2.2", optional = true }
-actix-service = { version = "1.0", optional = true }
-env_logger = { version = "0.7", optional = true }
-regex = "1.4.2"
-
 [dev-dependencies]
-ya-market = { path = ".", features = ["testing"] }
-
 all_asserts = "2.2.0"
 serde_json = "1.0"
 #serial_test = "0.5.0"
