--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -1,24 +1,11 @@
 name: Goth
 
 on:
-  pull_request:
-    branches:
-      - master
-      - release/*
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
 
 jobs:
-  wait-for-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait for build to succeed
-        uses: tomchv/wait-my-workflow@v1.1.0
-        id: wait-for-build
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "Tests & Build (ubuntu-latest)"
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          timeoutSeconds: 7200
-
   triggering-workflow-info:
     name: Triggerin Workflow Info
     runs-on: ubuntu-latest
@@ -31,15 +18,12 @@ jobs:
   integration-test:
     name: Integration Tests
     runs-on: goth
-    needs: wait-for-build
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     defaults:
       run:
         working-directory: './goth_tests'
 
     steps:
-      - run: echo '${{ toJson(github) }}'
-      - run: echo '${{ toJson(steps) }}'
-      - run: echo '${{ toJson(jobs) }}'
       - name: Checkout
         uses: actions/checkout@v2
         with:
