--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,7 +22,7 @@ pytest = "^6.2"
 pytest-asyncio = "^0.14"
 goth = "^0.2"
 # to use development goth version uncomment below
-#goth = { git = "https://github.com/golemfactory/goth/goth.git", rev = "29e21ac6a9a755f757d6a0ebf9ebeb21d14139d6" }
+#goth = { git = "https://github.com/golemfactory/goth.git", rev = "29e21ac6a9a755f757d6a0ebf9ebeb21d14139d6" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
