--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -20,9 +20,9 @@ readme = "README.md"
 python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.14"
-#goth = "^0.2"
+goth = "^0.3"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", rev = "cb2f4cf928753a021781109ec34ef461c1cdc784" }
+#goth = { git = "https://github.com/golemfactory/goth.git", rev = "29e21ac6a9a755f757d6a0ebf9ebeb21d14139d6" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
