--- a/.github/workflows/goth.yml
+++ b/.github/workflows/goth.yml
@@ -24,7 +24,7 @@ jobs:
           timeoutSeconds: 7200
 
       - name: Fail if build was not a success ( ubuntu )
-        run: echo job status: ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
+        run: echo job status= ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
 
       - name: Wait for build to succeed ( macos )
         uses: tomchv/wait-my-workflow@v1.1.0
@@ -36,7 +36,7 @@ jobs:
           timeoutSeconds: 7200
 
       - name: Fail if build was not a success ( macos )
-        run: echo job status: ${{ steps.wait-for-build-mac.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-mac.outputs.conclusion == 'success'] }}
+        run: echo job status= ${{ steps.wait-for-build-mac.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-mac.outputs.conclusion == 'success'] }}
 
       - name: Wait for build to succeed ( windows )
         uses: tomchv/wait-my-workflow@v1.1.0
@@ -48,7 +48,7 @@ jobs:
           timeoutSeconds: 7200
 
       - name: Fail if build was not a success ( windows )
-        run: echo job status: ${{ steps.wait-for-build-win.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-win.outputs.conclusion == 'success'] }}
+        run: echo job status= ${{ steps.wait-for-build-win.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-win.outputs.conclusion == 'success'] }}
 
   integration-test:
     name: Integration Tests
