--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 
-/.github/                                @prekucki @tworec
 /.github/workflows/goth.yml              @golemfactory/ya-integration
+/.github/workflows/nightly-goth.yml      @golemfactory/ya-integration
 
 # Activity
 /core/activity/                          @golemfactory/exe-unit
