--- a/golem_cli/Cargo.toml
+++ b/golem_cli/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 ya-client = { version = "0.5", features = ['cli'] }
 ya-compile-time-utils = "0.2"
-ya-core-model = { version = "^0.4", features=["payment", "version"] }
+ya-core-model = { version = "^0.4", features=["payment", "version", "identity"] }
 ya-provider = "0.2"
 ya-utils-path = "0.1.0"
 ya-utils-process = { version = "0.1.0", features = ["lock"] }
@@ -41,3 +41,6 @@ url = "2.1"
 [target.'cfg(target_family = "unix")'.dependencies]
 libc="0.2.73"
 nix="0.18.0"
+
+[dev-dependencies]
+serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test"}
