--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -24,9 +24,9 @@ ya-utils-path = "0.1"
 ya-utils-process = { version = "0.1", features = ['lock'] }
 ya-std-utils = "0.1"
 
-actix = { version = "0.10", default-features = false }
-actix-rt = "1.1.1"
-actix_derive = "0.5.0"
+actix = { version = "0.11", default-features = false }
+actix-rt = "2.2"
+actix_derive = "0.6"
 anyhow = "1.0"
 backoff = "0.2.1"
 bigdecimal = "0.2"
@@ -56,7 +56,8 @@ strum = "0.20"
 strum_macros = "0.20"
 sys-info = "0.7.0"
 thiserror = "1.0.14"
-tokio = { version = "0.2.10", features = ["process", "signal"] }
+tokio = { version = "1.6", features = ["process", "signal"] }
+tokio-stream = {version = "0.1.6", features = ["sync"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 yansi = "0.5.0"
