--- a/core/activity/Cargo.toml
+++ b/core/activity/Cargo.toml
@@ -14,10 +14,9 @@ ya-service-api-interfaces = "0.1"
 ya-service-api-web = "0.1"
 ya-service-bus = "0.4"
 
-actix-rt = "1.0"
-actix-web = "3.2"
+actix-web = "4.0.0-beta.6"
+actix-http = "3.0.0-beta.6"
 anyhow = "1.0"
-bytes = "0.5"
 chrono = "0.4"
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
 diesel_migrations = "1.4"
@@ -34,11 +33,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shlex = "0.1"
 thiserror = "1.0"
-tokio = { version = "0.2.11", features = ["time"] }
+tokio = { version = "1.6", features = ["time"] }
+tokio-stream = "0.1.6"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 structopt = "0.3.7"
 
 [dev-dependencies]
 ya-sb-router = "0.4"
 
-
+actix-rt = "2.2"
