--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -13,7 +13,6 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
-actix-rt = "1.1"
 anyhow = "1.0"
 appdirs = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
@@ -32,15 +31,16 @@ rpassword = "3.0.2"
 serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
-tokio = { version = "0.2", features = ["fs", "blocking"] }
+tokio = { version = "1.6", features = ["fs"] }
 uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
 ya-service-api-derive = "0.1"
 ya-sb-router = "0.4"
 
-actix-service = "1.0.5"
-actix-web = "3.2"
+actix-rt = "2.2"
+actix-service = "2.0"
+actix-web = "4.0.0-beta.6"
 awc = "2.0"
 base64 = "0.12"
 dotenv = "0.15"
