--- a/core/metrics/Cargo.toml
+++ b/core/metrics/Cargo.toml
@@ -15,7 +15,8 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
-actix-web = { version = "3", features = ["openssl"] }
+awc = "3.0.0-beta.5"
+actix-web = { version = "4.0.0-beta.6", features = ["openssl"] }
 anyhow = "1.0.32"
 bigdecimal = "0.2"
 futures = "0.3"
@@ -26,5 +27,5 @@ metrics-core = "0.5.2"
 metrics-runtime = "0.13.1"
 percent-encoding = "2.1.0"
 structopt = "0.3"
-tokio = { version = "0.2", features = ["time", "sync"] }
+tokio = { version = "1.6", features = ["time", "sync"] }
 url = "2.1.1"
