--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -19,8 +19,7 @@ ya-service-api-interfaces = "0.1"
 ya-service-api-web = "0.1"
 ya-service-bus = "0.4"
 
-actix-rt = "1.0"
-actix-web = "3.2"
+actix-web = "4.0.0-beta.6"
 anyhow = "1.0.26"
 base64 = "0.12"
 bigdecimal = "0.2"
@@ -41,7 +40,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
-tokio = { version = "0.2", features = ["fs"] }
+tokio = { version = "1.6", features = ["fs"] }
+uint = "0.7"
 uuid = { version = "0.8", features = ["v4"] }
 humantime="2.0.1"
 
@@ -53,7 +53,7 @@ ya-zksync-driver = "0.2"
 ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
 
-actix-rt = "1.0"
+actix-rt = "2.2"
 
 rand = "0.7"
 # Lock ethsign on this commit to match parity-crypto=0.6 from zksync_eth_client
