--- a/core/persistence/Cargo.toml
+++ b/core/persistence/Cargo.toml
@@ -19,4 +19,4 @@ log = "0.4.8"
 r2d2 = "0.8"
 serde_json = "1.0"
 thiserror = "1.0.9"
-tokio = { version = "0.2", features = ["blocking"] }
+tokio = { version = "1.6", features = [] }
