--- a/core/serv-api/web/Cargo.toml
+++ b/core/serv-api/web/Cargo.toml
@@ -12,8 +12,8 @@ ya-service-api = "0.1"
 ya-service-api-cache = "0.1"
 ya-service-bus = "0.4"
 
-actix-service = "1.0.0"
-actix-web = "3.2"
+actix-service = "2.0"
+actix-web = "4.0.0-beta.6"
 actix-web-httpauth = "0.5"
 futures = "0.3"
 log = "0.4"
@@ -27,7 +27,7 @@ ya-sb-router = "0.4"
 ya-service-api-derive = "0.1"
 ya-service-api-interfaces = "0.1"
 
-actix-rt = "1.1"
+actix-rt = "2.2"
 anyhow = "1.0"
 awc = "2.0"
 env_logger = "0.7"
