--- a/core/version/Cargo.toml
+++ b/core/version/Cargo.toml
@@ -14,7 +14,7 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
-actix-web = "3.2"
+actix-web = "4.0.0-beta.6"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
@@ -26,4 +26,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3.21"
 thiserror = "^1.0"
-tokio = { version = "0.2", features = ["time", "sync"] }
+tokio = { version = "1.6", features = ["time", "sync"] }
