--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -36,7 +36,7 @@ ya-service-bus = "0.4"
 ya-transfer = "0.1"
 ya-utils-path = "0.1"
 
-actix = { version = "0.10", default-features = false }
+actix = { version = "0.11", default-features = false }
 anyhow = "1.0.19"
 async-trait = "0.1.24"
 chrono = "0.4.10"
@@ -60,8 +60,9 @@ sha3 = { version = "0.8.2", optional = true }
 signal-hook = { version = "0.1.13", features = ["tokio-support"] }
 structopt = "0.3"
 thiserror = "1.0.10"
-tokio = { version = "0.2.11", features = ["process", "signal", "time"] }
-tokio-util = { version = "0.3", features = ["codec"] }
+tokio = { version = "1.6", features = ["process", "signal", "time"] }
+tokio-util = { version = "0.6.7", features = ["codec"] }
+tokio-stream = "0.1.6"
 url = "2.1.1"
 yansi = "0.5.0"
 
@@ -69,9 +70,9 @@ yansi = "0.5.0"
 ya-runtime-api = { version = "0.3", path = "runtime-api", features = ["codec", "server"] }
 ya-sb-router = "0.4"
 
-actix-files = "0.4"
-actix-rt = "1.0.1"
-actix-web = "3.2"
+actix-files = { git = "https://github.com/actix/actix-web.git", rev = "b2d6b6a70c815689945256b508109b57bdff1d2a" }
+actix-rt = "2.2"
+actix-web = "4.0.0-beta.6"
 env_logger = "0.7"
 rustyline = "7.0.0"
 sha3 = "0.8.2"
