--- a/exe-unit/tokio-process-ns/Cargo.toml
+++ b/exe-unit/tokio-process-ns/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio= { version = "0.2", features=["process"] }
+tokio= { version = "1.6", features=["process"] }
 
 [target.'cfg(target_os="linux")'.dependencies]
 libc= "0.2"
 nix="0.11.0"
 
 [dev-dependencies]
-tokio= { version = "0.2", features=["process", "rt-threaded", "macros"] }
+tokio= { version = "1.6", features=["process", "rt-multi-thread", "macros"] }
