--- a/golem_cli/Cargo.toml
+++ b/golem_cli/Cargo.toml
@@ -35,7 +35,7 @@ serde_json = "1.0"
 strip-ansi-escapes = "0.1"
 structopt = "0.3"
 strum = "0.20.0"
-tokio = { version = "0.2", features = ["process", "rt-core", "signal", "time", "io-util", "io-std"] }
+tokio = { version = "1.6", features = ["process", "signal", "time", "io-util", "io-std", "macros"] }
 url = "2.1"
 
 [target.'cfg(target_family = "unix")'.dependencies]
