--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -26,7 +26,7 @@ futures = "0.3"
 log = "0.4"
 promptly = "0.1.5"
 r2d2 = "0.8.8"
-rand = "0.7.3"
+rand = "0.8"
 rpassword = "3.0.2"
 serde_json = "1.0"
 structopt = "0.3"
@@ -39,9 +39,9 @@ ya-service-api-derive = "0.1"
 ya-sb-router = "0.4"
 
 actix-rt = "2.2"
-actix-service = "2.0"
-actix-web = "4.0.0-beta.6"
-awc = "2.0"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
+awc = "=3.0.0-beta.4"
 base64 = "0.12"
 dotenv = "0.15"
 env_logger = "0.7.1"
