--- a/core/activity/Cargo.toml
+++ b/core/activity/Cargo.toml
@@ -14,8 +14,8 @@ ya-service-api-interfaces = "0.1"
 ya-service-api-web = "0.1"
 ya-service-bus = "0.4"
 
-actix-web = "4.0.0-beta.6"
-actix-http = "3.0.0-beta.6"
+actix-web = "=4.0.0-beta.5"
+actix-http = "=3.0.0-beta.5"
 anyhow = "1.0"
 chrono = "0.4"
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
