--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -11,7 +11,7 @@ bcast-singleton = []
 
 [dependencies]
 ya-agreement-utils = { version = "^0.2"}
-ya-client = "0.5"
+ya-client = "0.6"
 ya-core-model = { version = "^0.3", features = ["market", "net"] }
 ya-diesel-utils = { version = "0.1" }
 ya-market-resolver = "0.2"
@@ -25,10 +25,10 @@ ya-std-utils = "0.1"
 ya-utils-actix = "0.1"
 
 actix = { version = "0.11", default-features = false }
-actix-http = "3.0.0-beta.6"
+actix-http = "=3.0.0-beta.5"
 actix-rt = "2.2"
-actix-service = "2.0"
-actix-web = "4.0.0-beta.6"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
 anyhow = "1.0"
 async-trait = { version = "0.1.33" }
 backtrace = "0.3.50"
@@ -47,7 +47,7 @@ metrics="0.12"
 num-derive = "0.3"
 num-traits = "0.2"
 r2d2 = "0.8"
-rand = "0.7.2"
+rand = "0.8"
 regex = "1.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
