--- a/core/serv-api/derive/Cargo.toml
+++ b/core/serv-api/derive/Cargo.toml
@@ -20,8 +20,8 @@ syn = { version = "1.0", features = ["full"] }
 ya-service-api-interfaces = "0.1"
 
 actix-rt = "2.2"
-actix-service = "2.0"
-actix-web = "4.0.0-beta.6"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
 anyhow = "1.0"
 log = "0.4"
 structopt = "0.3"
