--- a/core/serv-api/interfaces/Cargo.toml
+++ b/core/serv-api/interfaces/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [dependencies]
-actix-web = "3"
+actix-web = "=4.0.0-beta.5"
 anyhow = "1.0"
 futures = "0.3"
