--- a/core/serv-api/web/Cargo.toml
+++ b/core/serv-api/web/Cargo.toml
@@ -6,15 +6,15 @@ authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [dependencies]
-ya-client = "0.5"
+ya-client = "0.6"
 ya-core-model = { version = "^0.3", features = ["appkey"] }
 ya-service-api = "0.1"
 ya-service-api-cache = "0.1"
 ya-service-bus = "0.4"
 
-actix-service = "2.0"
-actix-web = "4.0.0-beta.6"
-actix-web-httpauth = "0.5"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
+actix-web-httpauth = "0.6.0-beta.1"
 futures = "0.3"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -29,6 +29,6 @@ ya-service-api-interfaces = "0.1"
 
 actix-rt = "2.2"
 anyhow = "1.0"
-awc = "2.0"
+awc = "=3.0.0-beta.4"
 env_logger = "0.7"
 structopt = "0.3"
