--- a/core/version/Cargo.toml
+++ b/core/version/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [dependencies]
-ya-client = "0.5"
+ya-client = "0.6"
 ya-compile-time-utils = "0.1"
 ya-core-model = { version = "^0.3", features = ["version"] }
 ya-persistence = "0.2"
@@ -14,7 +14,7 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
-actix-web = "4.0.0-beta.6"
+actix-web = "=4.0.0-beta.5"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
