--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -49,9 +49,9 @@ hex = "0.4.2"
 lazy_static = "1.4.0"
 log = "0.4.8"
 openssl= { version = "0.10", optional = true }
-rand = "0.6"
+rand = "0.8"
 regex = "1.3.4"
-reqwest = { version = "0.10.7", optional = true }
+reqwest = { version = "0.11", optional = true }
 secp256k1 = { version = "0.19", optional = true }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -70,9 +70,9 @@ yansi = "0.5.0"
 ya-runtime-api = { version = "0.3", path = "runtime-api", features = ["codec", "server"] }
 ya-sb-router = "0.4"
 
-actix-files = { git = "https://github.com/actix/actix-web.git", rev = "b2d6b6a70c815689945256b508109b57bdff1d2a" }
+actix-files = "=0.6.0-beta.4"
 actix-rt = "2.2"
-actix-web = "4.0.0-beta.6"
+actix-web = "=4.0.0-beta.5"
 env_logger = "0.7"
 rustyline = "7.0.0"
 sha3 = "0.8.2"
