[goth nightly] make nightly use master instead latest stable release + enable manual invocation

--- a/.github/workflows/nightly-goth.yml
+++ b/.github/workflows/nightly-goth.yml
@@ -1,6 +1,8 @@
 name: Goth nightly
 
 on:
+  workflow_dispatch:
+
   schedule:
     # run this workflow every day at 3:00 AM UTC
     - cron: '0 3 * * *'
@@ -50,7 +52,7 @@ jobs:
         run: |
           poetry run poe goth-assets
           # Runs on default yagna release, i.e. latest stable release from GitHub
-          poetry run poe goth-tests
+          poetry run poe goth-tests --config-override docker-compose.build-environment.branch=master
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
