Resumable HTTP transfers
- transfer: introduce `TransferContext` to store state between retries / redirects
- transfer: `retry_transfer` -> `transfer_with` with a new interface
- http transfer: range support querying & sending for resumes
- http transfer: basic redirect support
- cache: url hashes in place of timestamps to be included in temporary file names
- cache: move into exe-unit/src/util/cache.rs
- exe-unit: simplify AbortHandleGuard impl

--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -27,6 +27,7 @@ lazy_static = "1.4.0"
 log = "0.4.8"
 percent-encoding = "2.1"
 rand = "0.7.3"
+regex = "1.3.4"
 serde = "1.0.104"
 sha3 = "0.8.2"
 tempdir = "0.3.7"
