--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/bin.rs"
 [features]
 default = ['compat-deployment']
 compat-deployment = []
-sgx=['graphene-sgx', 'openssl/vendored', 'reqwest/trust-dns', 'secp256k1/rand', 'sha3', 'ya-client-model/sgx', 'ya-core-model/sgx']
+sgx=['graphene-sgx', 'openssl/vendored', 'reqwest/trust-dns', 'secp256k1/rand', 'ya-client-model/sgx', 'ya-core-model/sgx']
 
 [target.'cfg(target_family = "unix")'.dependencies]
 nix = "0.17.0"
@@ -50,13 +50,12 @@ lazy_static = "1.4.0"
 log = "0.4.8"
 openssl= { version = "0.10", optional = true }
 rand = "0.6"
-regex = "1.3.4"
 reqwest = { version = "0.10.7", optional = true }
 secp256k1 = { version = "0.19", optional = true }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.11"
-sha3 = { version = "0.8.2", optional = true }
+sha3 = "0.8.2"
 signal-hook = { version = "0.1.13", features = ["tokio-support"] }
 structopt = "0.3"
 thiserror = "1.0.10"
