Test provider breaking Agreement (#1259)
* Move files from goth

* Adjust tests to new model

* Change up addresses to daomain names

* Fix test with unreachable Requestor using higher DebitNotes interval

* Freeze goth branch

* Move test description to docstrings

* Stop using topology in tests

* Update goth to version 0.4

* Adjust timeouts

* Update goth_tests/domain/ya-provider/test_provider_multi_activity.py

Co-authored-by: azawlocki <artur.zawlocki@golem.network>

* Apply suggestions from code review

Co-authored-by: Kuba Mazurek <jakub.mazurek@golem.network>

* Apply suggestions from code review

Co-authored-by: Kuba Mazurek <jakub.mazurek@golem.network>

* Handle config paths better

* Fix logging format error

Co-authored-by: azawlocki <artur.zawlocki@golem.network>
Co-authored-by: Kuba Mazurek <jakub.mazurek@golem.network>

--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -33,4 +33,5 @@ poethepoet = "^0.10.0"
 codestyle = "black --check --diff ."
 goth-assets = "python -m goth create-assets assets"
 goth-tests = "pytest -svx ."
+provider-tests = "pytest -svx ./domain/ya-provider"
 typecheck = "mypy ."
