Test replacing / with -

--- a/.github/workflows/nightly-goth.yml
+++ b/.github/workflows/nightly-goth.yml
@@ -65,11 +65,15 @@ jobs:
           # Runs on branches defined within matrix
           poetry run poe goth-tests --config-override docker-compose.build-environment.branch=${{ matrix.branch }}
 
+      - name: Convert branch name to valid file name ( replace / with - )
+        id: branch_as
+        run: echo "::set-output name=file_name::$(echo '${{ matrix.branch }}' | sed 's/\//-/g')"
+
       - name: Upload test logs
         uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: goth-logs_${{ matrix.branch }}
+          name: goth-logs_${{ steps.branch_as.outputs.file_name }}
           path: /tmp/goth-tests
 
       # Only relevant for self-hosted runners
