Move goth log assertions to yagna repo (#1448)

--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -5,7 +5,7 @@
 
 docker-compose:
 
-  docker-dir: "../../../assets/docker/"
+  docker-dir: "assets/docker/"
 
   build-environment:
     # TODO:
@@ -24,10 +24,10 @@ docker-compose:
     zksync: ".*Running on http://0.0.0.0:3030/.*"
 
 
-key-dir: "../../../assets/keys"
+key-dir: "assets/keys"
 
 
-web-root: "../../../assets/web-root"
+web-root: "assets/web-root"
 
 
 node-types:
@@ -37,20 +37,16 @@ node-types:
   - name: "Requestor"
     class: "goth.runner.probe.RequestorProbe"
 
-  - name: "Wasm-Provider"
-    class: "goth.runner.probe.ProviderProbe"
+  - name: "VM-Wasm-Provider"
+    class: "goth_tests.helpers.probe.ProviderProbe"
     mount:
-      - read-only: "provider/presets.json"
+      - read-only: "assets/provider/presets.json"
         destination: "/root/.local/share/ya-provider/presets.json"
-      - read-only: "provider/hardware.json"
+      - read-only: "assets/provider/hardware.json"
         destination: "/root/.local/share/ya-provider/hardware.json"
       - read-write: "~/.local/share/ya-provider/vm-images"
         destination: "/root/.local/share/ya-provider/exe-unit/cache/tmp"
     privileged-mode: True
-    environment:
-      - "IDLE_AGREEMENT_TIMEOUT=5s"
-      - "DEBIT_NOTE_ACCEPTANCE_DEADLINE=8s"
-      - "DEBIT_NOTE_INTERVAL=6"
 
 nodes:
 
@@ -58,5 +54,9 @@ nodes:
     type: "Requestor"
 
   - name: "provider-1"
-    type: "Wasm-Provider"
+    type: "VM-Wasm-Provider"
+    use-proxy: True
+
+  - name: "provider-2"
+    type: "VM-Wasm-Provider"
     use-proxy: True
