--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -20,9 +20,9 @@ readme = "README.md"
 python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.14"
-goth = "^0.4"
+goth = "^0.5"
 # to use development goth version uncomment below
-#goth = { git = "https://github.com/golemfactory/goth.git", rev = "ab37bc5de60bdd6685ef3c52279704691cabb72f" }
+# goth = { git = "https://github.com/golemfactory/goth.git", branch = "your-branch-here" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
