--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.19", optional = true }
+tokio-compat-02 = "0.2"
 url = { version = "2.2", optional = true }
 
 ipnet = { version = "2.3", optional = true }
